Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -62,11 +62,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "palermo = neighborhoods"
+    "palermo = neighborhoods[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Palermo'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "palermo"
    ]
   },
   {
@@ -82,7 +102,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "la_boca = None"
+    "la_boca = Non"
    ]
   },
   {
