--- a/index.ipynb
+++ b/index.ipynb
@@ -98,11 +98,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "la_boca = Non"
+    "la_boca = neighborhoods[-1]"
    ]
   },
   {
